--- a/Ling.tex
+++ b/Ling.tex
@@ -118,8 +118,8 @@
 % \\\\
 % \textcolor{red}{[Figure with logic diagram of whats described above}
 % \\\\
-Η εξίσωση \ref{eq:ling_sum_1} αυτή μπορεί να εκφραστεί διαφορετικά
-βοηθώντας στην μείωση της λογικής που απαιτείται για τον υπολογισμό του αθροίσματος.
+Η εξίσωση \ref{eq:ling_sum_1} αυτή μπορεί να εκφραστεί με μεγαλύτερη πολυπλοκότητα 
+αλλά ταυτόχρονα μειώνοντας τον συνολικό χρόνο υπολογισμού του αθροίσματος.
 \begin{equation}
 \label{eq:ling_sum_2}
 \equationame{άθροισμα κατά Ling (2)}
@@ -128,6 +128,21 @@
 % \\\\
 % \textcolor{red}{[Figure with logic diagram of whats described above}
 % \\\\
+Στην εναλλακτική τροποποίηση που εκφράζεται στην εξίσωση \ref{eq:ling_sum_2} και 
+απεικονίζεται στην εικόνα \ref{fig:Ling_sum_2} με πρώτη ματιά φαίνεται να είναι 
+υπάρχει αρνητική απόδοση σε σχέση με την αρχική και πιο απλή υλοποίηση.
+Στην πραγματικότητα όμως η απόδοση αφορά την καθυστέρησή και όχι το εμβαδόν. Το σήμα
+$Η$ είναι αυτό που υπολογίζεται τελευταίο χρονικά και στην πρώτη αρχιτεκτονική
+είναι στο κρίσιμο μονοπάτι. Αντίθετα στην δεύτερη υλοποίηση η λογική πύλη XOR 
+έχει τελική τιμή στην έξοδο της πριν οριστικοποιηθεί η τιμή του σήματος H, παράλληλα 
+με τον υπολογισμό της. 
+\\\\
+ \textcolor{red}{[Βάλε αστερίσκο στην λέξη "κρίσιμο μονοπάτι" και δώσε εξήγησε την στο
+ κάτω μέρος της σελίδας]}
+\\\\
+ \textcolor{red}{[Ίσως να ήταν ενδιαφέρον να φτιαχτούν αυτά τα δύο modules και να μετρηθεί 
+ το εμβαδόν και το delay τους στο Design Compiler]}
+\\
 
 %------------------------------------------------
  Παρατηρούμε πως η μέθοδος του Ling μειώνει την πολυπλοκότητα μόνο στο πρώτο επίπεδο 
