Updates from ShareLaTeX

--- a/Ling.tex
+++ b/Ling.tex
@@ -133,12 +133,9 @@
 υπάρχει αρνητική απόδοση σε σχέση με την αρχική και πιο απλή υλοποίηση.
 Στην πραγματικότητα όμως η απόδοση αφορά την καθυστέρησή και όχι το εμβαδόν. Το σήμα
 $Η$ είναι αυτό που υπολογίζεται τελευταίο χρονικά και στην πρώτη αρχιτεκτονική
-είναι στο κρίσιμο μονοπάτι. Αντίθετα στην δεύτερη υλοποίηση η λογική πύλη XOR 
+είναι στο κρίσιμο μονοπάτι\footnote{Κρίσιμο μονοπάτι (critical path) Το μονοπάτι με αρχί την είσοδο και τέλος την έξοδο του κυκλώματος που έχει την μεγαλύτερη καθυστέρηση}. Αντίθετα στην δεύτερη υλοποίηση η λογική πύλη XOR 
 έχει τελική τιμή στην έξοδο της πριν οριστικοποιηθεί η τιμή του σήματος H, παράλληλα 
 με τον υπολογισμό της. 
-\\\\
- \textcolor{red}{[Βάλε αστερίσκο στην λέξη "κρίσιμο μονοπάτι" και δώσε εξήγησε την στο
- κάτω μέρος της σελίδας]}
 \\\\
  \textcolor{red}{[Ίσως να ήταν ενδιαφέρον να φτιαχτούν αυτά τα δύο modules και να μετρηθεί 
  το εμβαδόν και το delay τους στο Design Compiler]}
@@ -154,8 +151,8 @@ $Η$ είναι αυτό που υπολογίζεται τελευταίο χρ
  
  
  \subsection{Αραίωση σε Ling Αρχιτεκτονικές}
- Sparsness-2
- \begin{equation*}
+Sparsness-2
+\begin{equation*}
     \begin{split}
         sum_i &= x_i \oplus G_{i-1:0}\\
         sum_i &= x_i \oplus p_{i-1}*H_{i-1:0}\\
@@ -165,7 +162,27 @@ $Η$ είναι αυτό που υπολογίζεται τελευταίο χρ
         sum_{i+1} &= x_{i+1} \oplus (g_i + p_i*p_{i-1}*H_{i-1:0})\\
         sum_{i+1} &= H_{i-1:0} ? x_{i+1} \oplus (g_i + p_i*p_{i-1}) : x_{i+1} \oplus g_i
     \end{split} 
- \end{equation*}
- 
+\end{equation*}
+Sparsness-4
+\begin{equation*}
+    \begin{split}
+        sum_i =& x_i \oplus G_{i-1:0}\\
+        =& x_i \oplus p_{i-1}*H_{i-1:0}\\
+        =& H_{i-1:0} ? x_i \oplus p_{i-1} : x_i\\
+        sum_{i+1} =& x_{i+1} \oplus G_{i:0}\\
+        =& x_{i+1} \oplus (g_i + p_i*G_{i-1:0})\\
+        =& x_{i+1} \oplus (g_i + p_i*p_{i-1}*H_{i-1:0})\\
+        =& H_{i-1:0} ? x_{i+1} \oplus (g_i + p_i*p_{i-1}) : x_{i+1} \oplus g_i\\
+        sum_{i+2} =& x_{i+2} \oplus G_{i+1:0}\\
+        =& x_{i+2} \oplus (g_{i+1} + p_{i+1}g_i + p_{i+1}p_iG_{i-1:0})\\
+        =& x_{i+2} \oplus (g_{i+1} + p_{i+1}g_i + p_{i+1}p_ip_{i-1}*H_{i-1:0})\\
+        =& H_{i-1:0} ? x_{i+1} \oplus (g_{i+1} + p_{i+1}g_i + p_{i+1}p_ip_{i-1}) : x_{i+1} \oplus (g_{i+1} + p_{i+1}g_i)\\
+        sum_{i+3} =& x_{i+3} \oplus G_{i+2:0}\\
+        =& x_{i+3} \oplus (g_{i+2} + p_{i+2}g_{i+1} + p_{i+2}p_{i+1}g_i + p_{i+2}p_{i+1}p_iG_{i-1:0})\\
+        =& x_{i+3} \oplus (g_{i+2} + p_{i+2}g_{i+1} + p_{i+2}p_{i+1}g_i + p_{i+2}p_{i+1}p_ip_{i-1}*H_{i-1:0})\\
+        =& H_{i-1:0} ? x_{i+1} \oplus (g_{i+2} + p_{i+2}g_{i+1} + p_{i+2}p_{i+1}g_i + p_{i+2}p_{i+1}p_ip_{i-1}) \\&: x_{i+3} \oplus (g_{i+2} + p_{i+2}g_{i+1} + p_{i+2}p_{i+1}g_i)
+    \end{split} 
+\end{equation*}
+
  
  
