--- a/titlepage.tex
+++ b/titlepage.tex
@@ -20,7 +20,8 @@
 	%------------------------------------------------
 	
 	\HRule\\[0.4cm]
-	{\huge\bfseries Recursive Ling $2^n-1$ Binary Adder}\\[0.4cm] % Title of your document
+	%{\huge\bfseries Recursive Ling $2^n-1$ Binary Adder}\\[0.4cm] % Title of your document
+	{\huge\bfseries Αναδρομική Ling Αρχιτεκτονική για αθροιστές υπολοίπου $2^n-1$}\\[0.4cm] 
 	\HRule\\[1.5cm]
 	
 	%------------------------------------------------
