Updates from ShareLaTeX

--- a/Results.tex
+++ b/Results.tex
@@ -160,6 +160,86 @@
 
 
 
+\clearpage
+
+
+
+
+
+
+
+\begin{multicols}{2}
+[\subsection{Μη-Τοπογραφικές Μετρήσεις sparse-4}]
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm}  p{1cm}  p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix  & 0.57  & 162.32    & 37.43 \\ 
+        \hline
+        Ling    & 0.47  & 191.83    & 43.01 \\
+        \hline
+        Jackson & 0.40  & 228.68    & 47.46 \\
+        \hline
+    \end{tabular}
+\caption{Μη-Τοπογραφικές sparse-4 Μετρήσεις 64-bit}
+\label{topo_sparse4_result_table_64}
+\end{table}
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+        & Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix  & 0.67  & 346.41    & 73.69 \\ 
+        \hline
+        Ling    & 0.52  & 411.05    & 84.11 \\
+        \hline
+        Jackson & 0.48  & 434.99    & 88.50 \\
+        \hline
+    \end{tabular}
+\caption{Μη-Τοπογραφικές sparse-4 Μετρήσεις 64-bit}
+\label{topo_sparse4_result_table_64}
+\end{table}
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+        & Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix  & 0.73  & 779.54    & 163.35 \\ 
+        \hline
+        Ling    & 0.63  & 902.82    & 184.92 \\
+        \hline
+        Jackson & 0.52  & 983.48    & 198.59 \\
+        \hline
+    \end{tabular}
+\caption{Μη-Τοπογραφικές sparse-4 Μετρήσεις 64-bit}
+\label{topo_sparse4_result_table_64}
+\end{table}
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix  & 0.85  & 1587.56    & 326.94 \\ 
+        \hline
+        Ling    & 0.70  & 1846.12    & 369.31 \\
+        \hline
+        Jackson & 0.62  & 2202.05    & 426.12 \\
+        \hline
+    \end{tabular}
+\caption{Μη-Τοπογραφικές sparse-4 Μετρήσεις 64-bit}
+\label{topo_sparse4_result_table_64}
+\end{table}
+%------------------------------------------------------------------------------
+\end{multicols}
 
 
 
@@ -172,13 +252,17 @@
 
 
 
-\subsection{Τοπογραφικές Μετρήσεις}
+
+
+
+\begin{multicols}{2}
+[\subsection{Τοπογραφικές Μετρήσεις}]
 
 \begin{table}[H]
 \centering
-     \begin{tabular}{||c | c  c  c ||} 
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
         \hline
-        Αρχιτεκτονική & Max Delay & Area & Power \\ [0.5ex] 
+         & Delay & Area & Power \\ [0.5ex]
         \hline\hline
         Prefix  & 0.393  & 150.7    & 38 \\ 
         \hline
@@ -193,9 +277,9 @@
 %------------------------------------------------------------------------------
 \begin{table}[H]
 \centering
-     \begin{tabular}{||c | c  c  c ||} 
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
         \hline
-        Αρχιτεκτονική & Max Delay & Area & Power \\ [0.5ex] 
+         & Delay & Area & Power \\ [0.5ex] 
         \hline\hline
         Prefix  & 0.589  & 384    & 97 \\ 
         \hline
@@ -210,9 +294,9 @@
 %------------------------------------------------------------------------------
 \begin{table}[H]
 \centering
-     \begin{tabular}{||c | c  c  c ||} 
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
         \hline
-        Αρχιτεκτονική & Max Delay & Area & Power \\ [0.5ex] 
+         & Delay & Area & Power \\ [0.5ex]
         \hline\hline
         Prefix  & 0.667  & 949.8    & 252.9 \\ 
         \hline
@@ -227,9 +311,9 @@
 %------------------------------------------------------------------------------
 \begin{table}[H]
 \centering
-     \begin{tabular}{||c | c  c  c ||} 
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
         \hline
-        Αρχιτεκτονική & Max Delay & Area & Power \\ [0.5ex] 
+         & Delay & Area & Power \\ [0.5ex] 
         \hline\hline
         Prefix  & 0.726  & 2725    & 736 \\ 
         \hline
@@ -242,7 +326,7 @@
 \label{topo_result_table_64}
 \end{table}
 %------------------------------------------------------------------------------
-
+\end{multicols}
 
 
 
