--- a/modAdder.tex
+++ b/modAdder.tex
@@ -209,6 +209,7 @@ $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$, συμβολίζοντας $G^*$ τα
 \\\\
 Από την εξίσωση \ref{eq:(G*,P*)} αποδεικνύεται 
 \begin{equation}
+\label{eq:(G*,P*)_new}
     \begin{split}
         (G^*_i,P^*_i) &= (g_i,p_i) \circledast (G^*_{i-1},P^*_{i-1})\\
         &= (g_i,p_i) \circledast (g_{i-1},p_{i-1}) \circledast ... \circledast (g_0,p_0) \circledast (G^*_{-1},P^*_{-1})\\
@@ -222,7 +223,8 @@ $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$, συμβολίζοντας $G^*$ τα
     \end{split}
 \end{equation}
 Στην τελευταία ισότητα της παραπάνω διαδικασίας εφαρμόζεται ο ισχυρισμός της εξίσωσης \ref{eq:GgG=Gg}
-
+Η σχέση αυτή ( εξίσωση \ref{eq:(G*,P*)_new} ) είναι και η αρχιτεκτονική βελτίωση των αθροιστών υπολοίπου
+$2^n-1$.
 
 
 
