Updates from ShareLaTeX

--- a/modAdder.tex
+++ b/modAdder.tex
@@ -226,7 +226,44 @@ $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$, συμβολίζοντας $G^*$ τα
 Η σχέση αυτή ( εξίσωση \ref{eq:(G*,P*)_new} ) είναι και η αρχιτεκτονική βελτίωση των αθροιστών υπολοίπου
 $2^n-1$.
 
+Σε αυτό το σημείο είναι αναγκαίο να δηλωθεί μια αναπαράσταση με σκοπό την ευκολία στην
+έκφραση συναρτήσεων και όρων. Το σήμα $G_{i}$ αντιπροσωπεύει το $G_{i:0}$, δηλαδή
+έχει κάθε ζευγάρι $(g_k,p_k)$, με $ i \geq k \geq 0 $, με τον τελεστή $\circledast$.
+Είναι δυνατό, όπως έχει προαναφερθεί, να έχουμε τον όρο $G_{i:j}$, με $ i \geq j$ με
+την περίπτωση της ισότητας τότε το $G_{i:i} = g_i$. Θα οριστεί μια νέα έκφραση, η οποία 
+προβλέπει την περίπτωση του $i < j$ στην έκφραση $G_{i:j}$. Στην περίπτωση, λοιπόν, που το
+$i < j$, τότε ορίζουμε :
+% \begin{equation*}
+%     (G_{i:j},P_{i:j} = (G_i,P_i) \circledast (G_{n-1:j},P_{n-1:j})
+% \end{equation*}
 
+\begin{equation}
+    (G_{i:j},P_{i:j}) =
+    \begin{cases}
+        (g_i,p_i)\circledast(g_{i-1},p_{i-1})\circledast...\circledast(g_j,p_j) ,& i > j \\
+        (g_i,p_i) ,& i = j \\
+        (G_{i:0},P_{i:0}) \circledast (G_{n-1:j},P_{n-1:j}) ,& i < j
+    \end{cases}
+\end{equation}
+Έχοντας ορίσει την παραπάνω έκφραση, είναι αποδεκτή και μια εναλλακτική διατύπωση των σημάτων $(G^*_i,P^*_i)$
+\begin{equation}
+    (G^*_i,P^*_i) = (G_{i:i+1},P_{i:i+1})
+\end{equation}
+Το ίδιο ισχύει και για τους υπόλοιπους όρους (P,H,Q).
+Για παράδειγμα σε ένα αθροιστή των οκτώ δυαδικών ψηφίων $n=8$, για τον υπολογισμό του 
+$G_{1:6}$ υπονοείται η παρακάτω έκφραση :
+\begin{equation*}
+    G_{1:7} = g_1 + p_1g_0 + p_1p_0g_7 + p_1p_0p_7g_6
+\end{equation*}
+Στην παρακάτω εικόνα φαίνεται η διαδικασία αυτή για το $G_{4:5} = G^*_{4:5}$. Είναι εμφανές
+πως το προηγούμενο στοιχείο του μηδέν είναι το $n-1$, δηλαδή το επτά στην περίπτωση του 8-bit
+αθροιστή. 
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.6]{Round_numbers.png}
+% \caption{}
+% \label{}
+\end{figure}
 
 
 
