Updates from ShareLaTeX

--- a/modAdder.tex
+++ b/modAdder.tex
@@ -123,8 +123,13 @@ $c'_{n-1} = G'_{n-1}$
 \label{eq:2^n-1_G'_eguation}
     (G'_i,P'_i) = (G_i + P_iG_{n-1} , P_{i})
 \end{equation}
-\textcolor{red}{[Βάλε το σχήμα από το \cite{vergos} fig.5]}
-\\\\
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{2^n-1_simple_Prefix_structure.png}
+\caption{Απλή δομή προθεματικού αθροιστή υπολοίπου $2^8-1$}
+\label{fig:2^n-1_simple_Prefix_structure}
+\end{figure}
 Ένας σχεδιασμός σαν τον παραπάνω, εκτός από το γεγονός του επιπλέον επιπέδου,
 έχει και το μειονέκτημα στο ότι το κρατούμενο εξόδου του πρώτου επιπέδου οδηγεί 
 n κόμβους του τελευταίου επιπέδου, όπως εκφράζεται και την εξίσωση \ref{eq:2^n-1_G'_eguation}.
@@ -273,7 +278,13 @@ $G_{1:6}$ υπονοείται η παρακάτω έκφραση :
 % \caption{}
 % \label{}
 \end{figure}
-
+\textcolor{red}{[Εξήγησε το παρακάτω παράδειγμα]}
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{2^8-1_new_structure.png}
+\caption{Παράλληλος προθεματικός αθροιστής υπολοίπου $2^8-1$}
+\label{fig:2^n-1_simple_Prefix_structure}
+\end{figure}
 
 
 
